fix: overflow

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,7 +3,8 @@ body {
   height: 100vh;
   width: 100vw;
 
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 /* .custom-select::after {
